# pagmo

./: .travis.yml  CMakeLists.txt  README.md
PyGMO/algorithm/: __init__.py  algorithm.cpp
PyGMO/core/: core.cpp
PyGMO/migration/: migration.cpp
PyGMO/problem/: __init__.py  _gtop.py  problem.cpp
PyGMO/test/: _archipelago_tests.py
PyGMO/topology/: topology.cpp
PyGMO/util/: CMakeLists.txt  __init__.py  util.cpp
PyGMO/util/_bbob_pproc/: __init__.py  cococommands.py  findfiles.py  ppfig.py  ppfigdim.py  ppfigparam.py  pprldistr.py  pproc.py  ppsingle.py  toolsdivers.py  toolsstats.py
PyGMO/util/coco/: CMakeLists.txt  __init__.py  benchmark.cpp
PyGMO/util/coco/postproc/: __init__.py  cococommands.py  findfiles.py  genericsettings.py  ppfig.py  ppfig2.py  ppfigdim.py  ppfigparam.py  ppfigs.py  pprldistr.py  pprldistr2.py  pprldmany.py  pproc.py  ppscatter.py  ppsingle.py  pptex.py  toolsdivers.py  toolsstats.py
doc/notebooks/tutorials/: coco_benchmarking.ipynb  using_bayesopt.ipynb
src/: CMakeLists.txt  algorithms.h  archipelago.cpp  population.cpp  population.h  problems.h  serialization.h
src/algorithm/: bat.cpp  bat.h  bayesopt.cpp  bayesopt.h  cmaes.cpp  cmaes2.cpp  cmaes2.h  cuckoosearch.cpp  cuckoosearch.h
src/migration/: fair_r_policy.cpp  fair_r_policy.h
src/problem/: bbob2015.cpp  bbob2015.h  pl2pl_fixed_time.cpp  pl2pl_fixed_time.h
src/topology/: base.cpp  base.h  custom.cpp  custom.h
src/util/: bbob.cpp  bbob.h  benchmark.cpp  benchmark.h
tests/: CMakeLists.txt  test_bbob.cpp  test_bbob2015.cpp  test_benchmark.cpp
(+2 files in other folders)
